# l4rerust

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.MD  README.md  build.sh  runqemu.sh  setup
config/: modules.list
config/cfg/: bash.cfg
config/lsb_root/etc/ssh/: sshd_config
config/lsb_root/lib/systemd/system/: epoll_server.service
config/systemd/: aio_server.service  fd_server.service  fs_server.service  sshd.service
crates/core-ffi-helpers/: ctypes.rs
crates/l4/: Cargo.toml  Makefile  build.rs  lib.rs  utcb.rs
crates/l4-sys/: Makefile  build.rs  consts.rs  lib.rs  scheduler.rs
crates/l4/scheduler/: autosar.rs  linux_like.rs  mod.rs
crates/l4_derive/: Makefile  lib.rs
crates/l4_derive/tests/: server_buffers.rs
crates/l4re/: Cargo.toml  Makefile  build.rs  lib.rs  mem.rs
crates/l4re-libc/: Cargo.toml  build.rs
crates/l4re-libc/include/sys/: signalfd.h  timerfd.h
crates/l4re-libc/src/: aio.c  epoll.c  inotify.c  lib.rs
crates/l4re-libc/tests/: epoll.rs  glibc_smoke.rs  musl_smoke.rs
crates/net-client/: Cargo.toml  README.md
crates/net-client/src/: lib.rs
docker/: Dockerfile
docs/: build.md  driver-packaging.md  musl_integration_whitepaper.md  systemd.md  toolchains.md
driver_picker/: Cargo.toml
driver_picker/src/: main.rs
files/cfg/: bash.cfg
files/lsb_root/: README
files/systemd/: bash.service  net_server.service
pkg/aio_server/: Makefile
pkg/bash/: Makefile
pkg/epoll_server/: Makefile
pkg/fd_server/: Makefile
pkg/fs_server/: Makefile
pkg/glibc/: Control  Makefile
pkg/libcap/: Control  Makefile
pkg/libcrypt/: Control  Makefile
pkg/musl/: Control  Makefile
pkg/systemd/: Makefile
scripts/: .config  README.md  build.sh  build_arm.sh  build_bash.sh  build_glibc.sh  build_libblkid.sh  build_libcap.sh  build_libcrypt.sh  build_libgcrypt.sh  build_libzstd.sh  build_musl.sh  build_systemd.sh  common_build.sh  custom-init.c  docker_build.sh  docker_run.sh  l4re.config  runqemu.sh  setup.sh  setup_l4re_env.sh  update_l4re_core.sh
scripts/lib/: component_artifacts.sh
scripts/patches/bash/: 0001-add-unistd-include.patch  0002-handle-missing-helpdir.patch
scripts/patches/fiasco/: 0001-Disable-FORTIFY-for-host-tools-on-non-glibc-libcs.patch
scripts/patches/glibc/: .gitkeep  0001-Use-linux-syscalls-for-time-and-eventfd.patch
scripts/patches/systemd/: disable-components.patch  disable-libcrypt.patch  remove-libcap.patch  remove-libmount.patch
src/.ham/: default_revision.xml  manifests_json  projects_list
src/.ham/hooks/: commit-msg
src/aio_server/: Cargo.toml
src/aio_server/src/: main.rs
src/driver/: Cargo.toml  Makefile  build.rs  driver.c  driver.cpp
src/driver/src/: lib.rs
src/driver_server/: Cargo.toml
src/driver_server/src/: main.rs
src/epoll_server/: Cargo.toml
src/epoll_server/src/: main.rs
src/examples/driver_client/: Cargo.toml
src/examples/driver_client/src/: main.rs
src/fd_server/: Cargo.toml
src/fd_server/src/: main.rs
src/fs_server/: Cargo.toml
src/fs_server/src/: main.rs  virtio.rs
src/ipc-example/client/: Cargo.toml
src/ipc-example/client/src/: client.rs
src/ipc-example/server/: Cargo.toml
src/l4rust/: Makefile
src/l4rust/core-ffi-helpers/: Cargo.toml  ctypes.rs
src/l4rust/l4-rust/: Cargo.toml  Makefile  build.rs  task.rs
src/l4rust/l4-rust/ipc/: iface.rs  mod.rs  serialise.rs  syscall.c  syscall.rs  types.rs
src/l4rust/l4-rust/scheduler/: mod.rs
src/l4rust/l4-sys-rust/: Cargo.toml  factory.rs
src/l4rust/l4_derive-rust/: clntsrv.rs  export.rs
src/l4rust/l4_derive-rust/tests/: server_buffers.rs
src/l4rust/l4re-libc/: Cargo.toml  build.rs
src/l4rust/l4re-libc/include/sys/: epoll.h  eventfd.h  inotify.h
src/l4rust/l4re-libc/src/: epoll.c  eventfd.c  lib.rs  signalfd.c  timerfd.c
src/l4rust/l4re-libc/tests/: eventfd.rs  inotify.rs  signalfd.rs  timerfd.rs
src/l4rust/l4re-rust/: env.rs
src/l4rust/libl4re-wrapper/: CMakeLists.txt  libl4re-wrapper.pc.in  libl4re-wrapperConfig.cmake.in
src/l4rust/libl4re-wrapper/include/: ipc.h
src/l4rust/libl4re-wrapper/lib/: ipc.c
src/l4rust/net-client/: Cargo.toml
src/linux_shims/: Cargo.toml
src/linux_shims/src/: lib.rs
src/net_server/: Cargo.toml
src/net_server/src/: main.rs  proto.rs  virtio.rs
src/pkg/net_server/: Makefile
src/pkg/openssh/: Makefile
src/virtio_frontend/: Cargo.toml
src/virtio_frontend/src/: ffi.rs  lib.rs  queue.rs  transport.rs
tool/gendep/: gendep
tools/: driver_picker_menu.sh  gendep.py  l4re-driver-wrap
tools/driver_picker/: Cargo.toml
tools/driver_picker/src/: main.rs
