[package]
name = "driver_server"
version = "0.1.0"
edition = "2021"

[dependencies]
l4 = { path = "../l4rust/l4-rust" }
l4re = { path = "../l4rust/l4re-rust" }
l4re-libc = { path = "../l4rust/l4re-libc" }
driver = { path = "../driver" }
virtio_frontend = { path = "../virtio_frontend" }

[workspace]
