[package]
name = "net_server"
version = "0.1.0"
edition = "2021"

[dependencies]
l4 = { path = "../l4rust/l4-rust" }
l4re = { path = "../l4rust/l4re-rust" }
l4re-libc = { path = "../l4rust/l4re-libc" }
smoltcp = { version = "0.12.0", default-features = false, features = ["std", "proto-ipv4", "socket-udp", "socket-tcp", "medium-ethernet"] }
