[package]
name = "l4"
version = "0.1.0"
authors = ["Sebastian Humenda <shumenda @ gmx . de>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
l4re-libc = { path = "../l4re-libc" }

[dependencies.bitflags]
version = "1.0"
default-features = false

[dependencies.l4_sys]
path = "../l4-sys-rust"

[dependencies.num]
version = "0.4"
default-features = false
features = []

[dependencies.num-traits]
version = "0.2"
default-features = false
features = []

[dependencies.num-derive]
version = "0.4"
default-features = false
features = []

[features]
default = ["std"]
std = []
